Finished file structure and started React implementation

--- a/react-portfolio/public/index.html
+++ b/react-portfolio/public/index.html
@@ -28,7 +28,7 @@
             <li id="welcome" ><a href="#about"></a>Hi, I'm Alan.</li>
                 </home>
 
-     <figure><img id="wallpaper" src="./assets/images/alan background.remini-enhanced.jpg" alt="Red Background"></figure>       
+     <figure><img id="wallpaper" src="../src/assets/images/alan background.remini-enhanced.jpg" alt="Red Background"></figure>       
 
     <figure id="about" class="image-forehead" alt="Alan's forehead"></figure>
         <section id="forehead">
